src/syntax/snapshots/texlab__syntax__latex__tests__structure_invalid_nesting.snap
---
source: src/syntax/latex.rs
expression: "setup(r#\"\\section{Foo} \\chapter{Bar}\"#)"

---
ROOT@0..27
  PREAMBLE@0..27
    SECTION@0..14
      SECTION_COMMAND@0..8 "\\section"
      BRACE_GROUP@8..14
        L_BRACE@8..9 "{"
        TEXT@9..12
          WORD@9..12 "Foo"
        R_BRACE@12..13 "}"
        WHITESPACE@13..14 " "
    CHAPTER@14..27
      CHAPTER_COMMAND@14..22 "\\chapter"
      BRACE_GROUP@22..27
        L_BRACE@22..23 "{"
        TEXT@23..26
          WORD@23..26 "Bar"
        R_BRACE@26..27 "}"

