src/syntax/snapshots/texlab__syntax__latex__tests__structure_nested.snap
---
source: src/syntax/latex.rs
expression: "setup(r#\"\\part{1}\\chapter{2}\\section{3}\\subsection{4}\\subsubsection{5}\\paragraph{6}\\subparagraph{7}\"#)"

---
ROOT@0..90
  PREAMBLE@0..90
    PART@0..90
      PART_COMMAND@0..5 "\\part"
      BRACE_GROUP@5..8
        L_BRACE@5..6 "{"
        TEXT@6..7
          WORD@6..7 "1"
        R_BRACE@7..8 "}"
      CHAPTER@8..90
        CHAPTER_COMMAND@8..16 "\\chapter"
        BRACE_GROUP@16..19
          L_BRACE@16..17 "{"
          TEXT@17..18
            WORD@17..18 "2"
          R_BRACE@18..19 "}"
        SECTION@19..90
          SECTION_COMMAND@19..27 "\\section"
          BRACE_GROUP@27..30
            L_BRACE@27..28 "{"
            TEXT@28..29
              WORD@28..29 "3"
            R_BRACE@29..30 "}"
          SUBSECTION@30..90
            SUBSECTION_COMMAND@30..41 "\\subsection"
            BRACE_GROUP@41..44
              L_BRACE@41..42 "{"
              TEXT@42..43
                WORD@42..43 "4"
              R_BRACE@43..44 "}"
            SUBSUBSECTION@44..90
              SUBSUBSECTION_COMMAND@44..58 "\\subsubsection"
              BRACE_GROUP@58..61
                L_BRACE@58..59 "{"
                TEXT@59..60
                  WORD@59..60 "5"
                R_BRACE@60..61 "}"
              PARAGRAPH@61..90
                PARAGRAPH_COMMAND@61..71 "\\paragraph"
                BRACE_GROUP@71..74
                  L_BRACE@71..72 "{"
                  TEXT@72..73
                    WORD@72..73 "6"
                  R_BRACE@73..74 "}"
                SUBPARAGRAPH@74..90
                  SUBPARAGRAPH_COMMAND@74..87 "\\subparagraph"
                  BRACE_GROUP@87..90
                    L_BRACE@87..88 "{"
                    TEXT@88..89
                      WORD@88..89 "7"
                    R_BRACE@89..90 "}"

