src/syntax/snapshots/texlab__syntax__latex__tests__structure_siblings.snap
---
source: src/syntax/latex.rs
expression: "setup(r#\"\\section{Foo} Foo \\section{Bar} Bar\"#)"

---
ROOT@0..35
  PREAMBLE@0..35
    SECTION@0..18
      SECTION_COMMAND@0..8 "\\section"
      BRACE_GROUP@8..14
        L_BRACE@8..9 "{"
        TEXT@9..12
          WORD@9..12 "Foo"
        R_BRACE@12..13 "}"
        WHITESPACE@13..14 " "
      TEXT@14..18
        WORD@14..17 "Foo"
        WHITESPACE@17..18 " "
    SECTION@18..35
      SECTION_COMMAND@18..26 "\\section"
      BRACE_GROUP@26..32
        L_BRACE@26..27 "{"
        TEXT@27..30
          WORD@27..30 "Bar"
        R_BRACE@30..31 "}"
        WHITESPACE@31..32 " "
      TEXT@32..35
        WORD@32..35 "Bar"

