src/syntax/snapshots/texlab__syntax__latex__tests__theorem_definition_name_with_description.snap
---
source: src/syntax/latex.rs
expression: "setup(r#\"\\newtheorem{foo}{Foo}\"#)"

---
ROOT@0..21
  PREAMBLE@0..21
    THEOREM_DEFINITION@0..21
      THEOREM_DEFINITION_COMMAND@0..11 "\\newtheorem"
      BRACE_GROUP_WORD@11..16
        L_BRACE@11..12 "{"
        WORD@12..15 "foo"
        R_BRACE@15..16 "}"
      BRACE_GROUP@16..21
        L_BRACE@16..17 "{"
        TEXT@17..20
          WORD@17..20 "Foo"
        R_BRACE@20..21 "}"

