src/syntax/snapshots/texlab__syntax__latex__tests__theorem_definition_name_with_description_and_counter.snap
---
source: src/syntax/latex.rs
expression: "setup(r#\"\\newtheorem{foo}[bar]{Foo}\"#)"

---
ROOT@0..26
  PREAMBLE@0..26
    THEOREM_DEFINITION@0..26
      THEOREM_DEFINITION_COMMAND@0..11 "\\newtheorem"
      BRACE_GROUP_WORD@11..16
        L_BRACE@11..12 "{"
        WORD@12..15 "foo"
        R_BRACE@15..16 "}"
      BRACKET_GROUP_WORD@16..21
        L_BRACKET@16..17 "["
        WORD@17..20 "bar"
        R_BRACKET@20..21 "]"
      BRACE_GROUP@21..26
        L_BRACE@21..22 "{"
        TEXT@22..25
          WORD@22..25 "Foo"
        R_BRACE@25..26 "}"

