src/syntax/snapshots/texlab__syntax__latex__tests__theorem_definition_only_name.snap
---
source: src/syntax/latex.rs
expression: "setup(r#\"\\newtheorem{foo}\"#)"

---
ROOT@0..16
  PREAMBLE@0..16
    THEOREM_DEFINITION@0..16
      THEOREM_DEFINITION_COMMAND@0..11 "\\newtheorem"
      BRACE_GROUP_WORD@11..16
        L_BRACE@11..12 "{"
        WORD@12..15 "foo"
        R_BRACE@15..16 "}"
      MISSING@16..16 ""

