src/syntax/snapshots/texlab__syntax__latex__tests__unmatched_braces.snap
---
source: src/syntax/latex.rs
expression: "setup(r#\"}{\"#)"

---
ROOT@0..2
  PREAMBLE@0..2
    ERROR@0..1 "}"
    BRACE_GROUP@1..2
      L_BRACE@1..2 "{"
      MISSING@2..2 ""

