src/syntax/snapshots/texlab__syntax__latex__tests__verbatim_include_simple.snap
---
source: src/syntax/latex.rs
expression: "setup(r#\"\\verbatiminput{foo/bar.txt}\"#)"

---
ROOT@0..27
  PREAMBLE@0..27
    VERBATIM_INCLUDE@0..27
      VERBATIM_INCLUDE_COMMAND@0..14 "\\verbatiminput"
      BRACE_GROUP_WORD_LIST@14..27
        L_BRACE@14..15 "{"
        WORD@15..26 "foo/bar.txt"
        R_BRACE@26..27 "}"

